--- a/markdown/draft.tex
+++ b/markdown/draft.tex
@@ -52,9 +52,15 @@
     \end{split}
 \end{equation}
 \begin{equation}
-    \nabla^{2} f(\rho,\phi,z) = \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{\rho}^{2}} + \frac{1}{\rho} \frac{\partial^{}{f(\rho,\phi,z)}}{\partial{\rho}^{}} + \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{z}^{2}}
+    \nabla^{2} f(\rho,\phi,z) = \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{\rho}^{2}} + \frac{1}{\rho} \frac{\partial^{}{f(\rho,\phi,z)}}{\partial{\rho}^{}} + \frac{1}{\rho^{2}} \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{\phi}^{2}} + \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{z}^{2}}
 \end{equation}
 \begin{equation}
-    \nabla^{2} \equiv \frac{\partial^{2}{}}{\partial{\rho}^{2}} + \frac{1}{\rho} \frac{\partial^{}{}}{\partial{\rho}^{}} + \frac{\partial^{2}{}}{\partial{z}^{2}}
+    \nabla^{2} \equiv \frac{\partial^{2}{}}{\partial{\rho}^{2}} + \frac{1}{\rho} \frac{\partial^{}}{\partial{\rho}^{}} + \frac{1}{\rho^{2}} \frac{\partial^{2}{}}{\partial{\phi}^{2}} + \frac{\partial^{2}{}}{\partial{z}^{2}}
+\end{equation}
+\begin{equation}
+    \nabla^{2} f(\rho,\phi,z) = {\frac {1}{\rho }}{\frac {\partial }{\partial \rho }} \left(\rho {\frac {\partial f(\rho,\phi,z)}{\partial \rho }} \right) + \frac{1}{\rho^{2}} \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{\phi}^{2}} + \frac{\partial^{2}{f(\rho,\phi,z)}}{\partial{z}^{2}}
+\end{equation}
+\begin{equation}
+    \nabla^{2} \equiv {\frac {1}{\rho }}{\frac {\partial }{\partial \rho }} \left(\rho {\frac {\partial }{\partial \rho }} \right) + \frac{1}{\rho^{2}} \frac{\partial^{2}{}}{\partial{\phi}^{2}} + \frac{\partial^{2}{}}{\partial{z}^{2}}
 \end{equation}
 \end{document}
